# MultiPL-E

./: .env  TODO.md  codegeex.py  extract_all_prompts.py  pass_k.py  pyproject.toml
dataset_builder/: humaneval_to_ada.py  humaneval_to_ada_2012.py  humaneval_to_elixir.py  humaneval_to_lua.py  humaneval_to_luau.py  humaneval_to_py.py  humaneval_to_py_no_types.py  humaneval_to_rb.py  humaneval_to_swift.py  libexperiments.py  python_to_ada_terms.md  terms.csv
evaluation/: Dockerfile
evaluation/src/: containerized_eval.py  eval_ada.py  eval_adb.py
prompts/: humaneval-ada-keep.jsonl  humaneval-ada_2012-keep.jsonl  humaneval-ada_2012-remove.jsonl  humaneval-ada_2012-reworded.jsonl  humaneval-ada_2012-transform.jsonl  mbpp-ada_2012-keep.jsonl  mbpp-ada_2012-reworded.jsonl
